# LocalQualityDegradationDetection

./: .gitignore  LICENSE  NOTICE  README.md  config.example.yaml  detect.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
benchmark/: README.md  baselines.py  metrics.py  run_eval.py  run_eval_smoke.py  run_eval_tier0.py  type_mapping.py
data/sample/: README.md
data/sample/expected/: block_01.json  edge_01.json  normal_01.json
docs/: FEISHU_EVALUATION.template.md  FEISHU_SCREENSHOTS.md  PORTFOLIO.md
docs/demo/: case_blur_v1.html  case_green_spill_v1.html
examples/: demo_report.html  demo_report.json  manifest.json
examples/reports/: banding_01.html  block_01.html  blur_01.html  face_over_01.html  mosaic_01.html  normal_01.html
scripts/: degrade_jimeng_clip.py  export_feishu_assets.py  generate_benchmark_dataset.py  generate_demo_assets.py  generate_synthetic_samples.py  make_portrait_clip.py  vlm_prompt_ablation.py
specs/: USE_CASE_BADCASE.md  VERSION_ROADMAP.md  method_selection.md
specs/001-v0-fast-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-v0-fast-mvp/checklists/: requirements.md
specs/001-v0-fast-mvp/contracts/: cli-contract.md  quality-report.schema.json
specs/002-v1-agent-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-v1-agent-layer/contracts/: cli-contract.md  llm-judge.schema.json  quality-report.v1.schema.json  vlm-confirm.schema.json
specs/003-v2-video-and-discover/: data-model.md  spec.md  tasks.md
specs/004-algorithm-deepening/: data-model.md  spec.md  tasks.md
src/lqdd/: __init__.py
src/lqdd/agent/: actions.py  context.py  judge_client.py  orchestrator.py  prompts.py  router.py
src/lqdd/attribution/: __init__.py  (+1 more)
tests/: benchmark_util.py  conftest.py
tests/contract/: test_judge_schema.py  test_report_schema.py  test_report_v1_schema.py  test_vlm_schema.py
tests/integration/: test_agent_pipeline_mock.py  test_cli_sample.py
tests/unit/: test_actions_whitelist.py  test_attribution.py  test_compression.py  test_edge_bleed.py  test_judge_parser.py  test_mos.py  test_mos_clip_iqa.py  test_phase_detectors.py  test_router.py  test_temporal_flicker.py  test_ui_app.py  test_video_clip_runner.py  test_vlm_caption.py  test_vlm_fuse.py
(+48 files in other folders)
