[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lqdd"
version = "1.0.0"
description = "Local Quality Degradation Detection — V1 Agent Layer"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
mediapipe = ["mediapipe>=0.10"]
full = ["mediapipe>=0.10"]
dev = ["pytest>=7.4"]

[project.scripts]
lqdd = "lqdd.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "vlm: tests requiring VLM service (skipped in v0.1 CI)",
]
addopts = "-m 'not vlm'"
