[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lqdd"
version = "1.0.0"
description = "Local Quality Degradation Detection — V1 Agent Layer"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
# mediapipe: optional upgrade for experimental hand_anomaly (fallback works without it)
mediapipe = ["mediapipe>=0.10"]

# clip_iqa: enables mos_model="clip_iqa" in ReportConfig
# Uses pyiqa (IQA-PyTorch) + CLIP-IQA (ICCV 2023) for no-reference perceptual quality prediction.
# Install: pip install "lqdd[clip_iqa]" or pip install pyiqa torch torchvision setuptools
clip_iqa = [
    "pyiqa>=0.1.10",
    "torch>=2.0",
    "torchvision>=0.15",
    "setuptools>=60",       # provides pkg_resources required by openai-clip
]

full = ["mediapipe>=0.10", "pyiqa>=0.1.10", "torch>=2.0", "torchvision>=0.15", "setuptools>=60"]
dev = ["pytest>=7.4", "Pillow>=10.0"]

[project.scripts]
lqdd = "lqdd.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "vlm: tests requiring VLM service (skipped in v0.1 CI)",
]
addopts = "-m 'not vlm'"
